SFUSA/force-app/main/default/objects/Account/fields/GTR_Type__c.field-meta.xml
<CustomField>
        <fullName>GTR_Type__c</fullName>
        <label>GTR Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arrivals</fullName>
                </value>
                <value>
                    <fullName>Departures</fullName>
                </value>
                <value>
                    <fullName>Arrivals &amp; Departures</fullName>
                </value>
                <value>
                    <fullName>Border</fullName>
                </value>
                <value>
                    <fullName>Duty Free Zone</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>