SFUSA/force-app/main/default/objects/Account/fields/gvc_Division_Key__c.field-meta.xml
<CustomField>
        <fullName>gvc_Division_Key__c</fullName>
        <formula>gvp__Territory__r.gvp__Region__r.gvp__Division__r.gvp__Division_Key__c</formula>
        <label>Division Key</label>
        <type>Text</type>
    </CustomField>