SFUSA/force-app/main/default/objects/Account/fields/gvc_Flag_Brand__c.field-meta.xml
<CustomField>
        <fullName>gvc_Flag_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Flag Brand</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>gvp__Brand__c.gvp__Key_Brand__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>gvp__Brand__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </CustomField>