SFUSA/force-app/main/default/objects/Account/fields/gvc_Number_of_cocktail_menus__c.field-meta.xml
<CustomField>
        <fullName>gvc_Number_of_cocktail_menus__c</fullName>
        <description>Number of cocktail menus physically present at the outlet</description>
        <inlineHelpText>Number of cocktail menus physically present at the outlet</inlineHelpText>
        <label># of cocktail menus</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>