SFUSA/force-app/main/default/objects/Account/fields/gvc_Sales_Organization__c.field-meta.xml
<CustomField>
        <fullName>gvc_Sales_Organization__c</fullName>
        <formula>gvp__Territory__r.gvp__Region__r.gvp__Division__r.gvc_Sales_Organization__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Organization</label>
        <type>Text</type>
    </CustomField>