SFUSA/force-app/main/default/objects/Account/fields/IHub__c.field-meta.xml
<CustomField>
        <fullName>IHub__c</fullName>
        <inlineHelpText>Is this account located in an Intellectual-Hub area?</inlineHelpText>
        <label>I-Hub</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>