SFUSA/force-app/main/default/objects/Account/fields/IHubIndex__c.field-meta.xml
<CustomField>
        <fullName>IHubIndex__c</fullName>
        <label>I-Hub Index</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High 21-24 Index</fullName>
                </value>
                <value>
                    <fullName>High25-29 Index</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>