SFUSA/force-app/main/default/objects/Account/fields/InstagramHandle__c.field-meta.xml
<CustomField>
        <fullName>InstagramHandle__c</fullName>
        <label>Instagram Handle</label>
        <length>30</length>
        <type>Text</type>
    </CustomField>