SFUSA/force-app/main/default/objects/Account/fields/Is_Spammer__c.field-meta.xml
<CustomField>
        <fullName>Is_Spammer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to check the consumer is Spammer or not.</description>
        <inlineHelpText>This field is used to check the consumer is Spammer or not.</inlineHelpText>
        <label>Is Spammer</label>
        <type>Checkbox</type>
    </CustomField>