SFUSA/force-app/main/default/objects/Account/fields/KPI__c.field-meta.xml
<CustomField>
        <fullName>KPI__c</fullName>
        <label>KPI</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>