SFUSA/force-app/main/default/objects/Account/fields/Latitude__c.field-meta.xml
<CustomField>
        <fullName>Latitude__c</fullName>
        <description>Account latitude.</description>
        <label>Latitude</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>