SFUSA/force-app/main/default/objects/Account/fields/Longitude__c.field-meta.xml
<CustomField>
        <fullName>Longitude__c</fullName>
        <description>Account longitude.</description>
        <label>Longitude</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>