SFUSA/force-app/main/default/objects/Account/fields/MarketingGroup__c.field-meta.xml
<CustomField>
        <fullName>MarketingGroup__c</fullName>
        <label>Marketing Group</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>