SFUSA/force-app/main/default/objects/Account/fields/Multicultural_Focus__c.field-meta.xml
<CustomField>
        <fullName>Multicultural_Focus__c</fullName>
        <inlineHelpText>Does this account have a multicultural focus?</inlineHelpText>
        <label>Multicultural Focus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>