SFUSA/force-app/main/default/objects/Account/fields/NonPremiseAccountSubType__c.field-meta.xml
<CustomField>
        <fullName>NonPremiseAccountSubType__c</fullName>
        <label>Non-Premise Account Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>NonPremiseAccountType__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alumni Association</fullName>
                </value>
                <value>
                    <fullName>Banquet Hall</fullName>
                </value>
                <value>
                    <fullName>Bar Academy / Bartending School</fullName>
                </value>
                <value>
                    <fullName>Caterer</fullName>
                </value>
                <value>
                    <fullName>College / Education</fullName>
                </value>
                <value>
                    <fullName>Convention Center</fullName>
                </value>
                <value>
                    <fullName>Custom POS</fullName>
                </value>
                <value>
                    <fullName>Festival</fullName>
                </value>
                <value>
                    <fullName>IBA (International Bartender Association)</fullName>
                </value>
                <value>
                    <fullName>Industry Event (e.g., Whiskey Fest, Cocktail Weeks)</fullName>
                </value>
                <value>
                    <fullName>Local Agency</fullName>
                </value>
                <value>
                    <fullName>Local Print</fullName>
                </value>
                <value>
                    <fullName>Local Radio</fullName>
                </value>
                <value>
                    <fullName>Local TV</fullName>
                </value>
                <value>
                    <fullName>Music Center</fullName>
                </value>
                <value>
                    <fullName>Off Premise Association</fullName>
                </value>
                <value>
                    <fullName>On Premise Association</fullName>
                </value>
                <value>
                    <fullName>PAC Group</fullName>
                </value>
                <value>
                    <fullName>Restaurant without Liquor License</fullName>
                </value>
                <value>
                    <fullName>Salon/Spa</fullName>
                </value>
                <value>
                    <fullName>Sampling (Off and On Premise)</fullName>
                </value>
                <value>
                    <fullName>Social Media (e.g., Yelp Elite)</fullName>
                </value>
                <value>
                    <fullName>Union</fullName>
                </value>
                <value>
                    <fullName>USBG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>