SFUSA/force-app/main/default/objects/Account/fields/Notes__c.field-meta.xml
<CustomField>
        <fullName>Notes__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </CustomField>