SFUSA/force-app/main/default/objects/Account/fields/OriginatingDistributor__c.field-meta.xml
<CustomField>
        <fullName>OriginatingDistributor__c</fullName>
        <label>Originating Distributor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Action Wholesale Liquor</fullName>
                </value>
                <value>
                    <fullName>Alabama Abc Board</fullName>
                </value>
                <value>
                    <fullName>Alabama Crown (0000029070) - Birmingham</fullName>
                </value>
                <value>
                    <fullName>Alabama Crown (0000040295)</fullName>
                </value>
                <value>
                    <fullName>Alabama Crown (0000040528) - Montgomery</fullName>
                </value>
                <value>
                    <fullName>Alabama Crown (0001136406) - Alabaster</fullName>
                </value>
                <value>
                    <fullName>Allan S Goodman Inc</fullName>
                </value>
                <value>
                    <fullName>Associated (0000055592)</fullName>
                </value>
                <value>
                    <fullName>Athens Distributing (Memphis)</fullName>
                </value>
                <value>
                    <fullName>Athens Distributing (Nashville)</fullName>
                </value>
                <value>
                    <fullName>B &amp; T Distributing Co. Inc.</fullName>
                </value>
                <value>
                    <fullName>Badger North - Fond Du Lac</fullName>
                </value>
                <value>
                    <fullName>Badger Wine &amp; Spirits Llc/Wi</fullName>
                </value>
                <value>
                    <fullName>Baker Dist. Corp. (0000028813)</fullName>
                </value>
                <value>
                    <fullName>Baker Distributing (0001136548)</fullName>
                </value>
                <value>
                    <fullName>Bellboy Corporation</fullName>
                </value>
                <value>
                    <fullName>Bellboy Corporation (0001131833)</fullName>
                </value>
                <value>
                    <fullName>Best Brands Inc</fullName>
                </value>
                <value>
                    <fullName>Bjt Inc (0000080057)</fullName>
                </value>
                <value>
                    <fullName>Bjt Inc (0000080058)</fullName>
                </value>
                <value>
                    <fullName>Boardwalk Distribution Company (0001136448)</fullName>
                </value>
                <value>
                    <fullName>Brescome Barton Inc</fullName>
                </value>
                <value>
                    <fullName>Capitol Distributing</fullName>
                </value>
                <value>
                    <fullName>Carolina Wine Company</fullName>
                </value>
                <value>
                    <fullName>Central Distributors</fullName>
                </value>
                <value>
                    <fullName>Central Liquor Co</fullName>
                </value>
                <value>
                    <fullName>Circle Sales Incorporated</fullName>
                </value>
                <value>
                    <fullName>Connecticut Distributors Inc</fullName>
                </value>
                <value>
                    <fullName>D &amp; V Distributing (0001145087)</fullName>
                </value>
                <value>
                    <fullName>Dba Spirit Distributing Co.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>