SFUSA/force-app/main/default/objects/Account/fields/OutofHomeMerchandising__c.field-meta.xml
<CustomField>
        <fullName>OutofHomeMerchandising__c</fullName>
        <label>Out of Home Merchandising</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billboard</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Sign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>