SFUSA/force-app/main/default/objects/Account/fields/Parent_Name__c.field-meta.xml
<CustomField>
        <fullName>Parent_Name__c</fullName>
        <description>Text Name of Parent Account for Use in GreatVines Mobile App</description>
        <formula>Parent.Name</formula>
        <inlineHelpText>Text Name of Parent Account</inlineHelpText>
        <label>Parent Name</label>
        <type>Text</type>
    </CustomField>