SFUSA/force-app/main/default/objects/Account/fields/POS__c.field-meta.xml
<CustomField>
        <fullName>POS__c</fullName>
        <inlineHelpText>Is POS allowed?</inlineHelpText>
        <label>POS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>