SFUSA/force-app/main/default/objects/Account/fields/PremiseType__c.field-meta.xml
<CustomField>
        <fullName>PremiseType__c</fullName>
        <label>Premise Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Off Premise</fullName>
                </value>
                <value>
                    <fullName>On Premise</fullName>
                </value>
                <value>
                    <fullName>Non-Premise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>