SFUSA/force-app/main/default/objects/Account/fields/PreviousStoreID__c.field-meta.xml
<CustomField>
        <fullName>PreviousStoreID__c</fullName>
        <externalId>true</externalId>
        <label>Previous Store ID</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>