SFUSA/force-app/main/default/objects/Account/fields/Primary_GTR_Channel__c.field-meta.xml
<CustomField>
        <fullName>Primary_GTR_Channel__c</fullName>
        <label>Primary GTR Channel</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Airport</fullName>
                </value>
                <value>
                    <fullName>Border</fullName>
                    <label>Border Store</label>
                </value>
                <value>
                    <fullName>Cruise</fullName>
                </value>
                <value>
                    <fullName>Inflight</fullName>
                </value>
                <value>
                    <fullName>Downtown</fullName>
                </value>
                <value>
                    <fullName>Embassy</fullName>
                </value>
                <value>
                    <fullName>Port</fullName>
                </value>
                <value>
                    <fullName>Airline</fullName>
                </value>
                <value>
                    <fullName>Crew Shop</fullName>
                </value>
                <value>
                    <fullName>Diplomates</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Ferry</fullName>
                </value>
                <value>
                    <fullName>Free Zone</fullName>
                </value>
                <value>
                    <fullName>Military</fullName>
                </value>
                <value>
                    <fullName>Ship Chandlers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>